--- a/nextjs-app/app/globals.css
+++ b/nextjs-app/app/globals.css
@@ -10,6 +10,8 @@
 
 @media (prefers-color-scheme: light) {
   :root {
+    --background-start-rgb: 255, 255, 255;
+    --background-end-rgb: 255, 255, 255;
     --foreground-rgb: 255, 255, 255;
     --background-start-rgb: 0, 0, 0;
     --background-end-rgb: 0, 0, 0;
